--- a/src/assets/scss/paper-kit/_examples.scss
+++ b/src/assets/scss/paper-kit/_examples.scss
@@ -248,6 +248,22 @@
     -webkit-text-fill-color: transparent;
 }
 
+@media (max-width:368px) {
+    .presentation-title {
+        font-size: 5.5em;
+        font-weight: 700;
+        margin: 0;
+        color: #FFFFFF;
+        background: #fbf8ec;
+        background: -moz-linear-gradient(top, #FFFFFF 35%, #4e6773 100%);
+        background: -webkit-linear-gradient(top, #FFFFFF 35%, #4e6773 100%);
+        background: -ms-linear-gradient(top, #FFFFFF 35%, #4e6773 100%);
+        background: linear-gradient(to bottom, #FFFFFF 35%, #4e6773 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+}
+
 .presentation-subtitle {
     font-size: 1.7em;
     color: #FFFFFF;
